RESOLVED FIXED50859
CanvasRenderContext2D::font() does not re-serialize the font
https://bugs.webkit.org/show_bug.cgi?id=50859
Summary CanvasRenderContext2D::font() does not re-serialize the font
Mihai Parparita
Reported 2010-12-10 18:33:00 PST
Currently, CanvasRenderContext2D::font() just returns the literal string that was passed in to the setter, instead of the serialized form of the current font (as http://www.whatwg.org/specs/web-apps/current-work/multipage/the-canvas-element.html#dom-context-2d-font says). This is making us fail these theses: canvas/philip/tests/2d.text.font.parse.basic.html canvas/philip/tests/2d.text.font.parse.complex.html canvas/philip/tests/2d.text.font.parse.invalid.html canvas/philip/tests/2d.text.font.parse.size.percentage.default.html canvas/philip/tests/2d.text.font.parse.size.percentage.html canvas/philip/tests/2d.text.font.parse.system.html
Attachments
Patch (9.00 KB, patch)
2012-08-10 13:03 PDT, Thiago Marcos P. Santos
no flags
Patch (9.40 KB, patch)
2012-08-10 13:05 PDT, Thiago Marcos P. Santos
no flags
Archive of layout-test-results from gce-cr-linux-05 (436.84 KB, application/zip)
2012-08-10 15:15 PDT, WebKit Review Bot
no flags
Patch (11.30 KB, patch)
2012-08-13 07:55 PDT, Thiago Marcos P. Santos
no flags
Patch (11.31 KB, patch)
2012-08-13 11:22 PDT, Thiago Marcos P. Santos
no flags
Patch (11.26 KB, patch)
2012-08-13 13:04 PDT, Thiago Marcos P. Santos
no flags
Thiago Marcos P. Santos
Comment 1 2012-08-10 13:03:21 PDT
Thiago Marcos P. Santos
Comment 2 2012-08-10 13:05:41 PDT
WebKit Review Bot
Comment 3 2012-08-10 15:15:42 PDT
Comment on attachment 157797 [details] Patch Attachment 157797 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/13476348 New failing tests: platform/chromium/virtual/gpu/fast/canvas/canvas-font-ex-units-crash.html fast/canvas/canvas-font-ex-units-crash.html
WebKit Review Bot
Comment 4 2012-08-10 15:15:47 PDT
Created attachment 157817 [details] Archive of layout-test-results from gce-cr-linux-05 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-05 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
Thiago Marcos P. Santos
Comment 5 2012-08-13 07:55:22 PDT
Kenneth Rohde Christiansen
Comment 6 2012-08-13 09:19:27 PDT
Comment on attachment 158000 [details] Patch I suppose the unskipped tests covers this fully
WebKit Review Bot
Comment 7 2012-08-13 09:52:00 PDT
Comment on attachment 158000 [details] Patch Rejecting attachment 158000 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: (content): Merge conflict in Source/WebCore/ChangeLog Failed to merge in the changes. Patch failed at 0001 [css] Remove "default" switch case from CSS primitive value mappings When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. Full output: http://queues.webkit.org/results/13481832
Thiago Marcos P. Santos
Comment 8 2012-08-13 11:22:41 PDT
WebKit Review Bot
Comment 9 2012-08-13 12:42:56 PDT
Comment on attachment 158055 [details] Patch Rejecting attachment 158055 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: Source/WebCore/ChangeLog Failed to merge in the changes. Patch failed at 0001 [BlackBerry] Rounding error somewhere when translating CompositingLayer 's for in-region scrolling When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. Full output: http://queues.webkit.org/results/13484853
Thiago Marcos P. Santos
Comment 10 2012-08-13 13:04:28 PDT
Created attachment 158082 [details] Patch Rebased once again. I really don't see the reason why cq is having issues with this patch. I'm not getting any conflict here.
WebKit Review Bot
Comment 11 2012-08-13 14:15:21 PDT
Comment on attachment 158082 [details] Patch Clearing flags on attachment: 158082 Committed r125450: <http://trac.webkit.org/changeset/125450>
WebKit Review Bot
Comment 12 2012-08-13 14:15:29 PDT
All reviewed patches have been landed. Closing bug.
Dean Jackson
Comment 13 2012-08-13 16:56:41 PDT
Unfortunately this has broken Apple Mac Lion WK1 tests. Those are not running on the EWS at the moment. http://build.webkit.org/results/Apple%20Lion%20Release%20WK1%20(Tests)/r125465%20(2304)/results.html
Dean Jackson
Comment 14 2012-08-13 16:59:22 PDT
Note You need to log in before you can comment on or make changes to this bug.