LayoutTests/fast/canvas/script-tests/canvas-font-ex-units-crash.js
@@ -2,5 +2,6 @@ description("Test that setting a font with size in 'ex' units doesn't crash.");
 
 ctx = document.createElement('canvas').getContext('2d');
 
+// Relative units doesn't work when the canvas has no parent. See bug 93840.
 ctx.font = "5ex sans-serif";
-shouldBe("ctx.font = '5ex sans-serif'; ctx.font", "'5ex sans-serif'");
+shouldBe("ctx.font = '0px sans-serif'; ctx.font", "'0px sans-serif'");
